--- a/frontend/src/Components/Styles/Home.css
+++ b/frontend/src/Components/Styles/Home.css
@@ -5,7 +5,7 @@
   height: 200px;
 }
 
-.about-us-container {
+.categories-container {
   margin-top: 45px;
   display: flex;
   justify-content: center;
@@ -18,18 +18,16 @@
   width: 500px;
   font-size: 60px;
   letter-spacing: 2px;
-
 }
 
 .about-us-container p {
   width: 700px;
   font-size: 24px;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
 }
 
-.home-footer-container{
+.home-footer-container {
   display: flex;
   justify-content: center;
   border: blue solid 1px;
 }
-
