--- a/frontend/src/Components/Styles/Hero.css
+++ b/frontend/src/Components/Styles/Hero.css
@@ -6,8 +6,9 @@
 }
 
 .hero-container {
-  background-image: url('../../../public//images/business-event-flyer-905353253.png');
-  height: 500px;
+  background-image: url('../../../public//images//business-event-flyer-905353253.png');
+  background-size: contain;
+  height: 600px;
   background-size: cover;
   display: flex;
   flex-direction: column;
