--- a/frontend/src/Components/Styles/EventCard.css
+++ b/frontend/src/Components/Styles/EventCard.css
@@ -1,10 +1,22 @@
-.card-body{
-    border: 1px red solid;
-    width: 200px;
-    padding-left: 10px;
-    padding-right: 10px;
+.event-card-container {
+  border: 1px black solid;
+  background-color: rgb(239, 236, 236);
+  border-radius: 10%;
+  margin: 5px;
 }
 
-p{
-text-align: center;
+.card-img {
+  border: 1px red solid;
+  background-color: aqua;
+  height: 9rem;
+  border-radius: 5%;
+}
+.card-body {
+  width: 200px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+p {
+  text-align: center;
 }
