--- a/frontend/src/Components/Styles/Search.css
+++ b/frontend/src/Components/Styles/Search.css
@@ -10,7 +10,6 @@
 .search-main-container {
   display: flex;
   border: 1px green solid;
-  height: 1000px;
   padding: 50px;
 }
 
@@ -24,7 +23,6 @@
 
 .search-results {
   border: 1px blue solid;
-  width: 70%;
 }
 
 .date-picker {
@@ -69,4 +67,14 @@
   margin-left: 10px;
   margin-right: 10px;
   margin-top: 15px;
+}
+
+.search-results {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  padding-top: 20px;
 }
