--- a/frontend/src/Components/Styles/EventCard.css
+++ b/frontend/src/Components/Styles/EventCard.css
@@ -1,15 +1,15 @@
 .event-card-container {
-  border: 1px black solid;
   background-color: rgb(239, 236, 236);
   border-radius: 10%;
   margin: 5px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
 
 .card-img {
-  border: 1px red solid;
   background-color: aqua;
   height: 9rem;
-  border-radius: 5%;
+  border-top-right-radius: 10%;
+  border-top-left-radius: 10%;
 }
 .card-body {
   width: 200px;
@@ -17,6 +17,6 @@
   padding-right: 10px;
 }
 
-p {
+.card-body p {
   text-align: center;
 }
