--- a/frontend/src/Components/Styles/EventCard.css
+++ b/frontend/src/Components/Styles/EventCard.css
@@ -1,8 +1,10 @@
 .event-card-container {
-  background-color: rgb(239, 236, 236);
   border-radius: 10%;
-  margin: 5px;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+  margin: 15px 5px 15px 5px;
+  box-shadow:
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .card-img {
@@ -10,13 +12,26 @@
   height: 9rem;
   border-top-right-radius: 10%;
   border-top-left-radius: 10%;
+  height: 150px;
+  background-image: url("../../../public/images/hip-hop-concert-flyer-english-500020135.png");
+  background-size: cover;
 }
 .card-body {
   width: 200px;
+  height: 250px;
   padding-left: 10px;
   padding-right: 10px;
+  background-image: linear-gradient(rgb(227, 219, 219), white);
+}
+
+.card-body h6 {
+  font-weight: 900;
 }
 
 .card-body p {
-  text-align: center;
+  font-weight: 300;
+}
+
+.card-icon {
+  margin-right: 5px;
 }
