--- a/frontend/src/Components/Styles/EventCard.css
+++ b/frontend/src/Components/Styles/EventCard.css
@@ -35,10 +35,9 @@
 .card-img {
   height: 175px;
   object-fit: fill;
-  border: 1px solid black;
   border-top-right-radius: 10%;
   border-top-left-radius: 10%;
-  background-image: url('../../../public/images/hip-hop-concert-flyer-english-500020135.png');
+  background-image: url("../../../public/images/hip-hop-concert-flyer-english-500020135.png");
   background-size: cover;
 }
 
@@ -50,7 +49,6 @@
   color: white;
 }
 .card-body {
-  border: 1px solid black;
   border-bottom-right-radius: 10%;
   border-bottom-left-radius: 10%;
   height: 275px;
