Form updates styling and function

--- a/frontend/src/Components/Styles/Event.css
+++ b/frontend/src/Components/Styles/Event.css
@@ -21,3 +21,8 @@
 
 .event-submit-button {
 }
+.modal-container{
+  background-image: linear-gradient(rgb(227, 219, 219), rgb(158, 231, 243));
+
+
+}
