--- a/frontend/src/Components/Styles/Event.css
+++ b/frontend/src/Components/Styles/Event.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 200px;
 }
 
 .event-date {
@@ -17,12 +18,41 @@
 }
 .event-image {
   width: 45%;
+  box-shadow:
+    rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
 .event-submit-button {
+  background-color: #001d4a;
+  color: white;
+  border-radius: 20px;
+  box-shadow:
+    rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
-.modal-container{
+
+.event-submit-button:hover {
+  border-radius: 20px;
+  color: white;
+}
+.event-description {
+  width: 40%;
+}
+
+.modal-container {
   background-image: linear-gradient(rgb(227, 219, 219), rgb(158, 231, 243));
+}
 
+.event-promoter {
+  font-size: 20px;
+  color: black;
+  font-weight: 900;
+}
+.event-title {
+  font-size: 40px;
+  font-weight: 900;
+}
 
+.master-container {
 }
