--- a/frontend/src/Components/Styles/SearchHero.css
+++ b/frontend/src/Components/Styles/SearchHero.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
 }
-.video-bg {
+.video-bg2 {
   width: 100%;
   height: 250px;
   top: 0;
@@ -13,7 +13,7 @@
   z-index: -1;
 }
 
-.video-overlay {
+.video-overlay2 {
   position: absolute;
   z-index: 1;
   font-size: 50px;
