--- a/frontend/src/Components/Styles/SearchHero.css
+++ b/frontend/src/Components/Styles/SearchHero.css
@@ -26,8 +26,10 @@
 }
 
 .search-bar {
-  height: 40%;
+  height: 35px;
   border-radius: 50px;
+  font-size: medium;
+  text-align: center;
 }
 .whats-happening {
   font-size: 70px;
