--- a/frontend/src/Components/Styles/HomeHero.css
+++ b/frontend/src/Components/Styles/HomeHero.css
@@ -23,6 +23,7 @@
   left: 50%;
   color: #fff;
   letter-spacing: 5px;
+  width: 75%;
 }
 
 .whats-happening {
@@ -37,7 +38,7 @@
     0 0 102px #0fa,
     0 0 151px #0fa;
   font-family: Sriracha;
-  animation: pulsate 2.5s infinite alternate;
+  animation: text-flicker 2.5s infinite alternate;
 }
 
 @keyframes pulsate {
