--- a/frontend/src/Components/Styles/Register.css
+++ b/frontend/src/Components/Styles/Register.css
@@ -16,7 +16,7 @@
   margin-top: 14em;
   background-color: rgb(255, 255, 255);
   opacity: 0.9;
-  width: 35%;
+  width: 500px;
   z-index: 1;
   position: absolute;
   border-radius: 25%;
