--- a/frontend/src/Components/Styles/EventCard.css
+++ b/frontend/src/Components/Styles/EventCard.css
@@ -7,6 +7,7 @@
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
+
 .event-card-container:hover {
   transform: scale(1);
   animation: pulse 2s infinite;
@@ -44,7 +45,8 @@
   border-bottom-right-radius: 10%;
   border-bottom-left-radius: 10%;
   background-image: linear-gradient(rgb(227, 219, 219), white);
-  height: 275px;
+  min-height: 300px;
+  height: 300px;
 }
 
 .card-body h6 {
