--- a/frontend/src/Components/Styles/HomeHero.css
+++ b/frontend/src/Components/Styles/HomeHero.css
@@ -1,6 +1,6 @@
 .hero2-container {
   position: relative;
-  background-color: black;
+  background-color: rgb(223, 223, 223);
   align-items: center;
   justify-content: center;
 }
@@ -9,7 +9,7 @@
   height: 30%;
   top: 0;
   object-fit: cover;
-  filter: opacity(40%);
+  filter: opacity(80%);
   z-index: -1;
 }
 
