--- a/frontend/src/Components/Styles/Home.css
+++ b/frontend/src/Components/Styles/Home.css
@@ -7,6 +7,7 @@
 
 .categories-container {
   margin-top: 45px;
+  margin-bottom: 75px;
   display: flex;
   justify-content: center;
   height: 25vh;
